[package]
name = "SKEAZN642"
version = "0.2.1"
authors = ["W. Clayton Pannell <clayton.pannell@gmail.com>"]
edition = "2018"
description = "Device support crate for KEAZN64 devices."
documentation = "https://docs.rs/skeazn642"
repository = "https://github.com/wcpannell/SKEAZN642"
readme = "README.md"
keywords = ["keazn64", "nxp", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "^1.0.0"
cortex-m = "^0.7.0"
vcell = "^0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "^0.6.14"

[features]
rt = ["cortex-m-rt/device"]
